# uvx-tools

./: README.md  pyproject.toml
file-stats/: README.md  pyproject.toml
file-stats/file_stats/: cli.py
file_stats/: __init__.py
hello-uvx/: README.md  pyproject.toml
hello-uvx/hello_uvx/: cli.py
hello_uvx/: __init__.py
pysay/: README.md  cli.py  pyproject.toml
pysay/pysay/: __init__.py
