[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-uvx"
version = "0.1.0"
description = "A simple hello world tool for uvx demonstration"
authors = [{name = "Demo Author", email = "demo@example.com"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
hello-uvx = "hello_uvx.cli:main"
