[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysay"
version = "0.1.0"
description = "A Python cowsay clone for uvx demonstration"
authors = [{name = "Demo Author", email = "demo@example.com"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pysay = "pysay.cli:main"
